tests/should-not-compile/return-null-from-void-function.talc
// EXPECTED ERROR: return expression has type null-type but must be assignable to void
function void f() { return null; }
